style.css
/* Reset and Default Styling Start */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  transition: all 0.3s;
  font-family: "Inter", sans-serif;
}

:root {
  --primary-color: #0d1b2a;
  --text-color-1: #575757;
  --text-color-2: #888888;
  --text-color-3: #333333;
  --light-text: #ffffff;
  --accent-color: #1d4ed8;
}

.container {
  max-width: 1200px;
  margin: 0px auto;
}

.center-content {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.justify-content {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

img {
  width: 100%;
}

.section-title {
  font-size: 40px;
  line-height: 48px;
  color: var(--primary-color);
  text-align: center;
}
.text {
  font-size: 16px;
  color: var(--text-color-1);
  line-height: 24px;
}

.btn {
  font-size: 16px;
  background-color: var(--accent-color);
  padding: 12px 25px;
  color: var(--light-text);
  border: solid 1px var(--accent-color);
  font-weight: 500;
  border-radius: 4px;
}
.btn:hover {
  background-color: var(--primary-color);
  border-color: var(--primary-color);
}

/* Reset and Default Styling End */

/* Styling for Header Section Start */
header {
  padding: 15px 0;
}
header .logo img {
  width: 124px;
}
header nav ul.center-content {
  flex-direction: row;
  list-style: none;
  gap: 25px;
}
header nav ul a {
  color: var(--text-color-1);
  font-size: 16px;
  font-family: "Arimo", sans-serif;
  font-weight: 400;
}
header nav ul a:hover {
  color: var(--accent-color);
}

/* Styling for Header Section End */

/* Styling for Main Content Start */
/* Styling for Main Content Start */

/* Styling for Banner Section Start */
.banner-section {
  background: linear-gradient(), url("./assets/images/banner.jpg");
}

.banner-section {
  background:
    linear-gradient(to right, rgba(0, 0, 0, 0.75) 30%, rgba(0, 0, 0, 0) 70%),
    linear-gradient(to right, rgba(0, 0, 0, 0) 40%, rgba(0, 0, 0, 0.75) 80%),
    url("./assets/images/banner.jpg");
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  height: 85vh;
}
.banner-section .banner-heading {
  font-size: 68px;
  color: var(--light-text);
  line-height: 76px;
}
.banner-section .text {
  color: var(--light-text);
  text-align: center;
  max-width: 60%;
  margin: 15px 0 50px 0;
}
.banner-section .btn:hover {
  background-color: var(--light-text);
  border-color: var(--light-text);
  color: var(--primary-color);
}

/* Styling for Banner Section End */

/* Styling for MTS Section Start */
.mts-section {
  padding: 80px 0;
}

.mts-cards {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 40px;
  margin-top: 50px;
}
.mts-card {
  border: solid 1px #0d1b2a22;
  border-radius: 14px;
  overflow: hidden;
}
.mts-card-content {
  padding: 25px;
}
.mts-card-content p.mts-subtitle {
  color: var(--accent-color);
  font-weight: 700;
  font-size: 16px;
  text-transform: uppercase;
  line-height: 24px;
}
.mts-card-content .mts-title {
  font-size: 24px;
  color: var(--primary-color);
  line-height: 28px;
  margin: 5px 0 10px 0;
}

/* Styling for MTS Section End */

/* Styling for Pricing Section Start */
.pricing-section {
  padding: 70px 0;
}
.pricing-section p.text {
  text-align: center;
  margin-top: 15px;
}

.pricing-cards {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  margin-top: 50px;
  width: 100%;
  gap: 25px;
}
.pricing-card {
  padding: 40px;
  border-radius: 14px;
  border: solid 1px #0d1b2a22;
}
.pricing-card.pro {
  background-color: var(--primary-color);
}

.pricing-name {
  color: var(--text-color-2);
  font-size: 16px;
  font-weight: 600;
  text-transform: uppercase;
}
.pricing-card .price {
  font-size: 40px;
  color: var(--primary-color);
  margin-top: 10px;
  line-height: 44px;
}
.pricing-card p.text {
  text-align: left;
  margin: 0;
}
.pricing-card ul {
  list-style-type: disc;
  border-top: solid 1px #0d1b2a22;
  margin-top: 25px;
  padding-top: 25px;
  padding-left: 18px;
  margin-bottom: 30px;
}
.pricing-card.pro ul {
  border-color: #ffffff22;
}
.pricing-card ul li {
  color: var(--text-color-3);
  line-height: 24px;
  margin-bottom: 7px;
  font-size: 16px;
}
.pricing-card ul li::marker {
  color: var(--accent-color);
  font-size: 18px;
}
.pricing-card.pro .pricing-name,
.pricing-card.pro .price,
.pricing-card.pro .text,
.pricing-card.pro ul li {
  color: var(--light-text);
}
.pricing-card .btn {
  display: inline-block;
  width: 100%;
  text-align: center;
}
.pricing-card.standard .btn,
.pricing-card.team .btn {
  border: solid 1px var(--accent-color);
  color: var(--accent-color);
  background-color: transparent;
}
.pricing-card.standard .btn:hover,
.pricing-card.team .btn:hover {
  background-color: var(--accent-color);
  color: var(--light-text);
}
.pricing-card.pro .btn:hover {
  background-color: var(--light-text);
  border-color: var(--light-text);
  color: var(--primary-color);
}

/* Styling for Pricing Section End */

/* Styling for the Section by Ai Help Start */
.faq-section {
  padding: 70px 0;
}
.faq-section .text {
  margin-top: 15px;
  text-align: center;
  color: var(--text-color-1);
}

.faq-items {
  width: 70%;
  margin-top: 40px;
  gap: 16px;
}

.faq-item {
  background-color: #1d4ed808;
  border: 1px solid #0d1b2a22;
  width: 100%;
  border-radius: 12px;
  overflow: hidden;
  transition: all 0.3s ease;
}

.faq-item:hover {
  background-color: #1d4ed818;
}
.faq-item:has(.faq-details[open]) {
  background-color: #1d4ed818;
}

.faq-details {
  width: 100%;
}

.faq-question {
  padding: 20px;
  font-size: 20px;
  font-weight: 600;
  color: var(--primary-color);
  cursor: pointer;
  list-style: none;
  user-select: none;
}

.faq-question::-webkit-details-marker {
  display: none;
}

.faq-icon {
  position: relative;
  width: 16px;
  height: 16px;
  flex-shrink: 0;
  margin-left: 16px;
}

.faq-icon::before,
.faq-icon::after {
  content: "";
  position: absolute;
  background-color: var(--accent-color);
  transition: transform 0.25s ease;
}
.faq-icon::before {
  top: 7px;
  left: 0;
  width: 16px;
  height: 2px;
}
.faq-icon::after {
  top: 0;
  left: 7px;
  width: 2px;
  height: 16px;
}

.faq-details[open] .faq-icon::after {
  transform: rotate(90deg);
  opacity: 0;
}

.faq-details[open] .faq-icon::before {
  transform: rotate(180deg);
  background-color: var(--text-color-3);
}

.faq-answer {
  padding: 0 20px 20px 20px;
  margin-top: -3px;
  color: var(--primary-color);
}
.faq-answer .text {
  color: var(--text-color-3);
  text-align: left;
  margin: 0;
}

.faq-details[open] .faq-answer {
  animation: fadeIn 0.4s ease-out;
}

@keyframes fadeIn {
  from {
    opacity: 0;
    transform: translateY(-4px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

/* Styling for the Section by Ai Help End */

/* Styling for Main Content End */
/* Styling for Main Content End */

/* Styling for Footer Section Start */
footer {
  background-color: var(--primary-color);
  padding: 50px 0 25px 0;
}
.footer-logo img {
  width: 120px;
}
footer ul {
  justify-content: end;
  list-style: none;
  gap: 25px;
}
.social-menu a {
  background-color: var(--light-text);
  display: inline-block;
  color: var(--primary-color);
  font-size: 18px;
  text-align: center;
  border-radius: 4px;
  line-height: 35px;
  width: 35px;
  height: 35px;
}
.social-menu a:hover {
  background-color: var(--accent-color);
  color: var(--light-text);
}

.footer-bottom .container {
  border-top: solid 1px #ffffff22;
  margin-top: 25px;
  padding-top: 25px;
}
.footer-bottom p.text {
  color: var(--text-color-2);
}
.footer-bottom ul a {
  color: var(--text-color-2);
  font-weight: 400;
  font-size: 16px;
}
.footer-bottom ul a:hover {
  color: var(--light-text);
}

/* Styling for Footer Section Start */

